Fix panels overlap

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -32,7 +32,7 @@
     position:fixed;
     right:80px;
     top:300px;
-	height: 35%;
+	height: 30%;
 	width: 260px;
 	overflow-y: auto;
 }
